unpackaged/main/default/objects/Brand_Details_Mapping__mdt/Brand_Details_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Brand Details Mapping</label>
    <pluralLabel>Brand Details Mappings</pluralLabel>
</CustomObject>