unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Brand_form_link__c.field-meta.xml
<CustomField>
    <fullName>Brand_form_link__c</fullName>
    <label>Brand form link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>