unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Brand_Number__c.field-meta.xml
<CustomField>
    <fullName>Brand_Number__c</fullName>
    <label>Brand Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>