unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Donot_sell_share_success_template__c.field-meta.xml
<CustomField>
    <fullName>Donot_sell_share_success_template__c</fullName>
    <label>Donot sell share success template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>