unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Email_template_donot_share_Sell__c.field-meta.xml
<CustomField>
    <fullName>Email_template_donot_share_Sell__c</fullName>
    <label>Email template donot share/Sell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>