unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Ordwide_Email__c.field-meta.xml
<CustomField>
    <fullName>Ordwide_Email__c</fullName>
    <label>Ordwide Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>