unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/PDR_Link__c.field-meta.xml
<CustomField>
    <fullName>PDR_Link__c</fullName>
    <label>PDR Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>