unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Privacy_Policy_Link__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Link__c</fullName>
    <label>Privacy Policy Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>