unpackaged/main/default/objects/Brand_Details_Mapping__mdt/fields/Success_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Success_Email_Template__c</fullName>
    <label>Success Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>